--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   # 🔹 HTTP (para chamadas à Edge Function)
   http: ^1.2.0
   
-  file_picker: ^8.0.0
+  file_picker: ^10.3.7
   
   # 🔹 Image Picker (para escolher imagens do dispositivo)
   image_picker: ^1.0.7
@@ -28,13 +28,15 @@ dependencies:
   audioplayers: ^6.5.1
   permission_handler: ^12.0.1
   path_provider: ^2.1.5
+  uuid: ^4.5.2
+  zego_uikit_prebuilt_call: ^4.21.1
 
 # Dependências apenas para Desenvolvimento e Testes
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # Configurações do Flutter
 flutter:
