--- a/web/manifest.json
+++ b/web/manifest.json
@@ -10,6 +10,16 @@
     "prefer_related_applications": false,
     "icons": [
         {
+            "src": "icons/Icon-192.jpg",
+            "sizes": "192x192",
+            "type": "image/jpeg"
+        },
+        {
+            "src": "icons/Icon-512.jpg",
+            "sizes": "512x512",
+            "type": "image/jpeg"
+        },
+        {
             "src": "icons/Icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
